fix: logical order of accessibility h spacing between labels and elements

--- a/css/main.scss
+++ b/css/main.scss
@@ -57,7 +57,7 @@ body {
         padding-top: 2em;
         padding-left: 2em;
         padding-right: 2em;
-        padding-bottom: 1em;
+        padding-bottom: 1.2em;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -79,7 +79,7 @@ body {
             line-height: 1.4em;
             color: $neutral-desaturated-blue;
             max-width: 20em;
-            padding-bottom: 1em;
+            padding-bottom: 1.2em;
         }
 
         .plan-content {
@@ -87,7 +87,7 @@ body {
             width: 100%;
             align-items: center;
             border-radius: .5em;
-            padding: 1em;
+            padding: 1.2em 1em;
             margin-bottom: 2em;
             background-color: $neutral-very-pale-blue;
 
@@ -99,7 +99,8 @@ body {
                 width: 100%;
                 height: auto;
 
-                h5 {
+                h2 {
+                    font-size: $font-size-paragraph;
                     font-weight: 900;
                     color: $neutral-dark-blue;
                 }
